grid overflow fix

--- a/widget/assets/styles/style.css
+++ b/widget/assets/styles/style.css
@@ -38,6 +38,7 @@
 }
 .list-item{
 	cursor: pointer;
+	overflow: hidden;
 }
 
 .enter-price .currency {
